コンタクトの再修正

--- a/index.html
+++ b/index.html
@@ -382,7 +382,7 @@
     <section class="contact" id="7">
       <div class="wrapper">
         <div class="contact-head">
-          <h2>Contact Us</h2>
+          <h2>Contact Us!!</h2>
           <p>どこへ越しても住みにくいと悟った時、詩が生れて、画が出来る。</p>
         </div>
         <div class="contact-form">
