--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@
         <div class="access-left">
           <h2>Access</h2>
           <p>
-            〒106-6126<br />東京都港区六本木 6丁目 10-1<br />六本木ヒルズ森タワー
+            〒106-6126<br />東京都港区八本木 6丁目 10-1<br />六本木ヒルズ森タワー
           </p>
         </div>
         <iframe
