--- a/index.html
+++ b/index.html
@@ -483,6 +483,9 @@
         </div>
       </div>
     </section>
+    <section class="about">
+      aboutを追加
+    </section>
     <footer>
       <div class="wrapper">
         <div class="footer-left">
